--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MBTI風</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <!DOCTYPE html>
@@ -11,12 +12,11 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>性格タイプ診断（MBTI風）</title>
+  <h1><img src="img/mbti.png" alt="ロゴ画像" style="width:150px;"></h1>
 </head>
 <body>
 
-  <h1>性格タイプ診断（MBTI風）</h1>
-  <p>いくつかの質問に答えて、MBTI風の4タイプ（分析家・外交官・番人・探検家）に分類します。</p>
+  <h5>いくつかの質問に答えて、MBTI風の4タイプ（分析家・外交官・番人・探検家）に分類します。</h5>
 
   <!-- Q1, Q2 : E / I -->
   <div>
@@ -72,12 +72,21 @@
 
   <button id="start">診断する</button>
 
-  <h2>結果</h2>
-  <p id="result-type"></p>
-  <p id="result-group"></p>
-  <p id="result-text"></p>
-<img id="result-image" src="" alt="診断結果画像" style="width:200px; display:none;">
+<div id="result-wrapper">
 
+  <!-- 左＝画像 -->
+  <div id="result-image-box">
+    <img id="result-image" src="" alt="診断結果" style="width:180px; display:none;">
+  </div>
+
+  <!-- 右＝テキスト -->
+  <div id="result-text-box">
+    <p id="result-type"></p>
+    <p id="result-group"></p>
+    <p id="result-text"></p>
+  </div>
+
+</div>
   <!-- JSファイルを最後で読み込むのがポイント -->
   <script src="app.js"></script>
 </body>
